force-app/main/default/objects/Contact/fields/Onboarding_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_End_Date__c</fullName>
    <formula>Start_Date__c + 90</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Onboarding End Date</label>
    <type>Date</type>
</CustomField>