force-app/main/default/objects/Contact/fields/Week__c.field-meta.xml
<CustomField>
    <fullName>Week__c</fullName>
    <formula>(Today() -  Start_Date__c)/7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>