force-app/main/default/objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
    <fullName>AllContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Start_Date__c</columns>
    <columns>Onboarding_End_Date__c</columns>
    <columns>Week__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Contractor,Employee,Other</value>
    </filters>
    <label>All Contacts</label>
</ListView>